2009-10-09  Karl Fogel  <karl.fogel@red-bean.com>

	* NEWS: Document bookmark.el (rev 1.114) format upgrade.  (Bug#3375)

2009-10-04  Michael Albinus  <michael.albinus@gmx.de>

	* NEWS: New function copy-directory.

2009-10-03  Chong Yidong  <cyd@stupidchicken.com>

	* srecode: New directory for SRecode template files.

2009-10-01  Michael Albinus  <michael.albinus@gmx.de>

	* NEWS: delete-directory has an optional parameter RECURSIVE.

2009-10-01  Carsten Dominik  <dominik@u016822.science.uva.nl>

	* refcards/orgcard.tex: New version number.

2009-09-28  Michael Albinus  <michael.albinus@gmx.de>

	* NEWS: Mention Tramp connection methods "imap" and "imaps".

2009-09-27  Teodor Zlatanov  <tzz@lifelogs.com>

	* NEWS: Mention new library imap-hash.el

2009-09-22  Juanma Barranquero  <lekktu@gmail.com>

	* NEWS: Mention new variable `help-downcase-arguments'
	and new default for arguments in *Help* buffers.

2009-09-15  Juanma Barranquero  <lekktu@gmail.com>

	* NEWS: Mention new behavior of -Q and new variable
	`inhibit-x-resources'.

2009-09-13  Chong Yidong  <cyd@stupidchicken.com>

	* PROBLEMS: Document Athena/Lucid internationalization
	problem (Bug#4333).

2009-09-02  Carsten Dominik  <dominik@u016822.science.uva.nl>

	* refcards/orgcard.tex: Document new effort setting commands.
	Document the new keys for agenda time motion.
	Document the `E' key in the agenda.

2009-08-29  Stefan Monnier  <monnier@iro.umontreal.ca>

	* NEWS: Declare unibyte sessions obsolete.

2009-08-28  Michael Albinus  <michael.albinus@gmx.de>

	* NEWS: Mention Tramp connection method "rsyncc" and variable
	`process-file-side-effects'.

2009-08-13  Kenichi Handa  <handa@m17n.org>

	* NEWS: Mention the new coding systme `utf-8-hfs' and many
	functions for Unicode normalization.

2009-08-09  CHENG Gao  <chenggao@gmail.com>

	* MORE.STUFF: Update Etags and Ispell URLs.

2009-08-08  Dmitry Dzhus <dima@sphinx.net.ru>

	* images/gud/all.xpm, images/gud/thread.xpm: New icons for
	gdb-mi.el
