@@ -1,3 +1,8 @@
+2009-11-08  Jared Finder  <jfinder@crypticstudios.com>
+
+	* progmodes/compile.el (compilation-error-regexp-alist-alist):
+	Handle "see declaration of" MSFT statements (Bug#4100).
+
 2009-11-08  Michael Albinus  <michael.albinus@gmx.de>
 
 	* net/tramp.el (tramp-advice-make-auto-save-file-name)
